[package]
name = "rcall"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "rcall"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rcall_macro = { path = "../rcall_macro"}