[package]
name = "rcall"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["rpc", "rcall", "echo", "services", "server"]
description = "a rpc framework writed in rust"
repository = "https://github.com/dennisding/rcall"
readme = "README.md"

# [[bin]]
# name = "test"
# path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "echo_server"
path = "echo/server.rs"

[[bin]]
name = "echo_client"
path = "echo/client.rs"

[lib]
name = "rcall"
path = "src/rcall.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rcall_macro = "0.1"
# rcall_macro = { path = "../rcall_macro"}